# code-intel-pipeline

./: .deepsource.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  Find-CodeIntelProjects.ps1  Install-MultiAgentMergeQueue.ps1  Install-SentruxVlangOverlay.ps1  Invoke-CccSliceBenchmark.ps1  Invoke-CodeEvidenceABTest.ps1  Invoke-CodeIntelAcceptance.ps1  Invoke-CodeIntelAutomaticPullRequest.ps1  Invoke-CodeIntelAutomaticPullRequestFlow.ps1  Invoke-CodeIntelBetaFeature.ps1  Invoke-CodeIntelOrchestrator.ps1  Invoke-CodeNexusLite.ps1  Invoke-CompatibilityFacadeFinalize.ps1  Invoke-CompeteProjectScore.ps1  Invoke-EvidenceProvider.ps1  Invoke-GitHubSolutionResearch.ps1  Invoke-GreenfieldSpecExtraction.ps1  Invoke-ModelChannelDelegate.ps1  Invoke-MultiAgentMergeQueue.ps1  Invoke-MultiAgentWorkspacePreflight.ps1  Invoke-NativeRetrievalBenchmark.ps1  Invoke-ProviderRuntimeInventory.ps1  Invoke-RepomixCodePack.ps1  Invoke-RepowiseProviderProbe.ps1  Invoke-ScopedRepowise.ps1  Invoke-SentruxAgentTool.ps1  Invoke-WorkflowRecommendation.ps1  LICENSE  New-ModelAdapterRequest.ps1  New-ModelExecutableHandle.ps1  OpenSpec-Detector.ps1  PLAN-REVIEW-LOG.md  README.md  Run-ScopedRepowiseDocs.py  Test-CodeIntelProjectConformance.ps1  (+62 more)
.githooks/: pre-push
.sentrux/: baseline.json  rules.toml
crates/code-nexus-lite/: .gitignore  Cargo.toml  README.md
crates/code-nexus-lite/src/: functions.rs  main.rs  triggers.rs
crates/code-nexus-lite/src/functions/: repowise.rs
docs/: advisory-workflow-recommendation.md  agent-goal-intake.md  artifact-data-contract.md  (+78 more)
(+632 files in other folders)
